--- a/Tetris/MainWindow.xaml
+++ b/Tetris/MainWindow.xaml
@@ -9,7 +9,8 @@
         MinWidth="800" MinHeight="800"
         Foreground="White"
         FontFamily="Segoe UI Light" FontSize="28"
-        KeyDown="Window_KeyDown">
+        KeyDown="Window_KeyDown"
+        Loaded="Window_Loaded">
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="./Images/Background.png"/>
@@ -20,20 +21,64 @@
                 <Image Source="./Images/TetrisLogo.png" 
                        Width="350" 
                        Height="200" 
-                       Margin="0,100,0,50"/>
+                       Margin="0,100,0,20"/>
                 <Button Content="Start Game" 
                         Background="Green" 
                         Padding="10" 
+                        Margin="0,20,0,20" 
                         Click="StartGame_Click" 
                         Width="180"/>
+                <Button Content="Option" 
+                        Background="Orange" 
+                        Padding="10" 
+                        Margin="0,20,0,20" 
+                        Click="Option_Click" 
+                        Width="180"/>   
                 <Button Content="Exit" 
                         Background="Red" 
                         Padding="10" 
-                        Margin="0,20,0,10" 
+                        Margin="0,20,0,20" 
                         Click="Exit_Click" 
                         Width="180"/>
             </StackPanel>
         </Grid>
+
+        <Grid x:Name="OptionMenu" Visibility="Hidden">
+            <StackPanel>
+                <TextBlock Text="Options" FontSize="36" Margin="0,20,0,20" TextAlignment="Center"/>
+                <StackPanel Orientation="Horizontal" Margin="0,10,0,10">
+                    <TextBlock Text="Move Left:" VerticalAlignment="Center"/>
+                    <ComboBox x:Name="MoveLeftComboBox" Width="100" Margin="10,0,0,0" PreviewKeyDown="KeyBindingComboBox_PreviewKeyDown"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0,10,0,10">
+                    <TextBlock Text="Move Right:" VerticalAlignment="Center"/>
+                    <ComboBox x:Name="MoveRightComboBox" Width="100" Margin="10,0,0,0" PreviewKeyDown="KeyBindingComboBox_PreviewKeyDown"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0,10,0,10">
+                    <TextBlock Text="Move Down:" VerticalAlignment="Center"/>
+                    <ComboBox x:Name="MoveDownComboBox" Width="100" Margin="10,0,0,0" PreviewKeyDown="KeyBindingComboBox_PreviewKeyDown"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0,10,0,10">
+                    <TextBlock Text="Rotate Clockwise:" VerticalAlignment="Center"/>
+                    <ComboBox x:Name="RotateCWComboBox" Width="100" Margin="10,0,0,0" PreviewKeyDown="KeyBindingComboBox_PreviewKeyDown"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0,10,0,10">
+                    <TextBlock Text="Rotate Counterclockwise:" VerticalAlignment="Center"/>
+                    <ComboBox x:Name="RotateCCWComboBox" Width="100" Margin="10,0,0,0" PreviewKeyDown="KeyBindingComboBox_PreviewKeyDown"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0,10,0,10">
+                    <TextBlock Text="Hold Block:" VerticalAlignment="Center"/>
+                    <ComboBox x:Name="HoldBlockComboBox" Width="100" Margin="10,0,0,0" PreviewKeyDown="KeyBindingComboBox_PreviewKeyDown"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0,10,0,10">
+                    <TextBlock Text="Drop Block:" VerticalAlignment="Center"/>
+                    <ComboBox x:Name="DropBlockComboBox" Width="100" Margin="10,0,0,0" PreviewKeyDown="KeyBindingComboBox_PreviewKeyDown"/>
+                </StackPanel>
+                <Button Content="Save" Click="SaveKeyBindings_Click" Width="100" Margin="0,20,0,0"/>
+            </StackPanel>
+        </Grid>
+
+
 
         <Grid x:Name="Game" Visibility="Hidden">
             <Grid.RowDefinitions>
@@ -105,6 +150,16 @@
                         Margin="0,20,0,0"
                         Padding="5"
                         Click="PlayAgain_Click"/>
+                    <Button Content="Menu"
+                        Background="Orange"
+                        Margin="0,20,0,0"
+                        Padding="5"
+                        Click="Menu_Click"/>
+                    <Button Content="Exit"
+                        Background="Red"
+                        Margin="0,20,0,0"
+                        Padding="5"
+                        Click="Exit_Click"/>       
                 </StackPanel>
             </Grid>
         </Grid>
